--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "react-lottie-player": "^1.5.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "sass": "^1.66.1"
   }
 }
