--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "autoprefixer": "10.4.15",
     "convex": "^1.0.3",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.15",
-    "next": "^13.4.16-canary.1",
+    "eslint-config-next": "^13.5.6",
+    "next": "^13.5.6",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-lottie-player": "^1.5.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "sass": "^1.66.1"
