--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie-player": "^1.5.4",
+    "react-mentions": "^4.4.10",
     "tailwindcss": "3.3.3",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/react-mentions": "^4.1.13",
     "sass": "^1.66.1"
   }
 }
