--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-lottie-player": "^1.5.4",
     "react-mentions": "^4.4.10",
+    "react-toastify": "^10.0.5",
     "tailwindcss": "3.3.3",
     "typescript": "^5.3.3"
   },
