--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "^13.5.6",
     "postcss": "8.4.27",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-lottie-player": "^1.5.4",
     "react-mentions": "^4.4.10",
