--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-config-next": "^13.5.6",
     "next": "^13.5.6",
     "postcss": "8.4.27",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.3",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
