--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "convex": "^1.0.3",
     "eslint": "8.47.0",
     "eslint-config-next": "^13.5.6",
+    "lucide-react": "^0.446.0",
     "next": "^13.5.6",
     "postcss": "8.4.27",
     "primeicons": "^7.0.0",
@@ -37,7 +43,9 @@
     "react-lottie-player": "^1.5.4",
     "react-mentions": "^4.4.10",
     "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
