--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "^13.5.6",
     "lucide-react": "^0.446.0",
     "next": "^13.5.6",
+    "openai": "^4.66.1",
     "postcss": "8.4.27",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.3",
