--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "convex:dev": "convex dev"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.27.3",
     "@clerk/clerk-react": "^4.23.2",
     "@clerk/nextjs": "^5.2.3",
     "@dnd-kit/core": "^6.1.0",
@@ -19,7 +20,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@olvyhq/widget-react": "^0.2.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@types/node": "20.5.0",
@@ -30,6 +33,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "convex": "^1.0.3",
     "eslint": "8.47.0",
     "eslint-config-next": "^13.5.6",
