--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "convex:dev": "convex dev"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^0.0.51",
+    "@ai-sdk/openai": "^0.0.67",
     "@anthropic-ai/sdk": "^0.27.3",
     "@clerk/clerk-react": "^4.23.2",
     "@clerk/nextjs": "^5.2.3",
@@ -30,6 +32,7 @@
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "ai": "^3.4.14",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
